unpackaged/objects/Summer_Research__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Adviser__c</fullName>
        <label>Academic Adviser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <label>CAP (Year 2 students only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Summer Researchs</relationshipLabel>
        <relationshipName>Summer_Researchs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <label>Class Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Summer Researchs</relationshipLabel>
        <relationshipName>Summer_Researchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>Describe any other prior research</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Choices_Description__c</fullName>
        <label>First Choices Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Choices__c</fullName>
        <label>First Choices For Summer Research</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Choices_Description__c</fullName>
        <label>Second Choices Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Second_Choices__c</fullName>
        <label>Second Choices For Summer Research</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Circumstances__c</fullName>
        <label>Special Circumstances</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Summer Research</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Summer Research ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summer Researchs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>